Fix the screen too small

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,8 @@
   padding: 0px;
   border: 25px solid #c8c8c8;
   background-color: #d8d8d8;
+  min-width: 450px;
+  min-height: 400px;
 }
 
 .App-logo {
