--- a/src/components/Board.css
+++ b/src/components/Board.css
@@ -6,4 +6,5 @@ p {
   display: inline-block;
   border: 0px;
   padding: 0px;
+  min-width: 450px;
 }
